4/12/21 BN/DH/CB: in pc.cpp we made pc_grab_item that picks up the item and puts it into inv, testing phase for all item management methods, need to fix duping bug with dropping items
4/8/21 BN/DH: Made the no fog show all monsters and items in color
4/7/21 BN/DH: Finished object generation and deallocated the objects after the dungeon is deleted
4/6/21 BN/DH: Made monster generation from vectors and started object generation, added color printing
4/3/21 BN/DH: changed monster generation to be from desc, added monster factory
3/30/21 BN/DH: Finished abilities, desc, added dice and description classes, added print function for parser //1.07 assignment done 
3/29/21 BN/DH/CB: Finished color, damage, hp, and speed. Still need to do description
3/24/21 BN: fixed the bug where you could teleport onto yourself
3/23/21 BN/DH/CB: finished everything for 1.06 (fixed fog of war, fixed teleporting onto a monster, implemented random teleportation) //1.06 assignment done
3/22/21 BN/DH/CB: Worked on telport mechanic, finished targeting mode, sometimes Z's show up in the fog of war mode and we don't know why, also need to fix teleporting onto a monster
3/21/21 CB: Started the teleportation mechanic, just the random.
3/20/21 BN/DH: Changed all .c files (except for heap.c) to .cpp, fixed any errors, added fog of war, added f key, which shows the entire screen
3/11/21 BN: Deleted save and load functions, and added comments to the main game loop
3/09/21 BN/DH: Updated scroll for monster list and added prefixes to the monster names, fixed bug where number of monsters in monster list didn't match alive monsters. //1.05 assignment done
3/09/21 BN: Added so that if there is an invalid input, monsters will not move, made it so it updates the amount of data allocated for monster_list in update_monster_list
3/09/21 DH: Added scroll functionality to monster list
3/08/21 DH/BN/CB: Added reserve for line 0 for text messages, added monster display